# aicc-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/core/database/: build.gradle.kts
android/core/network/: build.gradle.kts
android/core/ui/: build.gradle.kts
android/core/ui/src/main/res/values/: strings.xml
android/data/api/: build.gradle.kts
android/data/recording/: build.gradle.kts
android/data/recording/src/main/: AndroidManifest.xml
android/feature/calling/: build.gradle.kts
android/feature/callplan/: build.gradle.kts
android/feature/contacts/: build.gradle.kts
android/feature/dashboard/: build.gradle.kts
android/feature/settings/: build.gradle.kts
android/gradle/: libs.versions.toml
app/: main.py
app/routers/: call_plan.py  recordings.py
app/services/: groq_service.py
backend/: fly.toml
backend/app/: auth.py  config.py  main.py  models.py
backend/app/routers/: calls.py  contacts.py  dashboard.py
backend/app/services/: sheets.py  storage.py
backend/tests/: conftest.py  test_call_plan.py  test_contacts.py  test_dashboard.py
tests/: test_auth.py  test_calls.py  test_dashboard.py  test_groq_service.py  test_models.py  test_recordings.py  test_sheets_service.py  test_storage_service.py
(+113 files in other folders)
